# decision-gate

./: .dockerignore  .gitattributes  .gitignore  .markdownlint.json  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DAY_1_USER_EXPERIENCE_REPORT.md  Dockerfile  KILLER_USE_CASES.md  NOTICE  README.ca.md  README.md  SECURITY.md  SUPPORT.md  decision-gate-pre-oss.bundle  deny.toml  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  rustfmt.toml  try_from
adapters/autogen/: README.md  pyproject.toml
adapters/crewai/: README.md  pyproject.toml
adapters/langchain/: README.md  pyproject.toml
adapters/openai_agents/: README.md  pyproject.toml
crates/decision-gate-cli/: AGENTS.md  Cargo.toml  README.md
crates/decision-gate-contract/: AGENTS.md  Cargo.toml  README.md
crates/decision-gate-mcp/: AGENTS.md  Cargo.toml  README.md
crates/decision-gate-sdk-gen/: Cargo.toml  README.md
decision-gate-broker/: AGENTS.md  Cargo.toml  README.md
decision-gate-broker/src/: broker.rs  lib.rs  payload.rs  tests.rs
decision-gate-broker/tests/: broker.rs  broker_unit_tests.rs  payload_tests.rs  sink_tests.rs  source_tests.rs
decision-gate-cli/: AGENTS.md  Cargo.toml  README.md
decision-gate-cli/src/: i18n.rs  interop.rs  lib.rs  main.rs  main_tests.rs  mcp_client.rs  security.rs  serve_policy.rs  tests.rs
decision-gate-cli/tests/: authoring_commands.rs  config_commands.rs  i18n.rs  runpack_commands.rs  serve_command.rs
decision-gate-config/: AGENTS.md  Cargo.toml  README.md
decision-gate-config/src/: config.rs  docs.rs  examples.rs  lib.rs  policy.rs  schema.rs
decision-gate-config/tests/: anchor_validation.rs  auth_validation.rs  boundary_validation.rs  config_artifacts.rs  config_defaults.rs  cross_field_validation.rs  docs_validation.rs  feedback_validation.rs  limits_validation.rs  load_validation.rs  namespace_registry_validation.rs  policy_validation.rs  provider_validation.rs  schema_defaults.rs  schema_validation.rs  security_validation.rs  server_validation.rs  storage_validation.rs
decision-gate-contract/: AGENTS.md  Cargo.toml  README.md
decision-gate-contract/src/: authoring.rs  contract.rs  examples.rs  lib.rs  main.rs  providers.rs  schemas.rs  tooling.rs  tooltips.rs  types.rs
decision-gate-contract/tests/: authoring.rs  authoring_bundle.rs  authoring_ron_edge_cases.rs  contract_bundle.rs  provider_capabilities.rs  schema_validation.rs  tool_name_order.rs  tooltips_manifest.rs
decision-gate-core/: AGENTS.md  Cargo.toml  README.md  research.md
decision-gate-core/examples/: minimal.rs
decision-gate-core/src/: lib.rs  tests.rs  tooling.rs
decision-gate-core/tests/: adversarial_inputs.rs  builtin_providers.rs  comparator.rs  comparator_fuzz.rs  comparator_numeric_precision.rs  condition_eval_ordering_unit.rs  control_plane.rs  data_shape_registry.rs  decimal_precision_extended.rs  evidence_correlation_unit.rs  evidence_errors.rs  gate_evaluator.rs  hashing.rs  identifiers.rs  lexicographic_evidence_ordering_unit.rs  limits.rs  metamorphic_determinism.rs  multi_stage_unit.rs  policy.rs  precheck.rs  proptest_comparator.rs  provider_missing.rs  provider_orchestration_unit.rs  runpack.rs  safe_summary.rs  spec_fuzz.rs  spec_validation.rs  store.rs  submissions.rs  timeouts.rs  trust_lane.rs  trust_lane_runtime.rs
decision-gate-mcp/: AGENTS.md  Cargo.toml  README.md
decision-gate-mcp/src/: audit.rs  auth.rs  capabilities.rs  config.rs  correlation.rs  docs.rs  evidence.rs  lib.rs  namespace_authority.rs  policy.rs  registry_acl.rs  runpack.rs  runpack_object_store.rs  runpack_storage.rs  server.rs  telemetry.rs  tenant_authz.rs  tests.rs  tools.rs  usage.rs  validation.rs
decision-gate-mcp/tests/: auth.rs  capability_registry.rs  config_validation.rs  contract_schema_e2e.rs  evidence_hash_validation_unit.rs  evidence_policy.rs  policy_engine.rs  precheck_audit.rs  provider_bootstrap.rs  provider_capabilities.rs  runpack_io.rs  tenant_authz.rs  tool_adapter.rs  tool_router.rs  usage_meter.rs  validation.rs
decision-gate-providers/: AGENTS.md  Cargo.toml  README.md
decision-gate-providers/src/: env.rs  http.rs  json.rs  lib.rs  registry.rs  tests.rs  time.rs
decision-gate-providers/tests/: env_provider.rs  http_provider.rs  http_provider_tls.rs  http_provider_unit.rs  json_provider.rs  json_provider_path_unit.rs  proptest_http.rs  proptest_json.rs  registry.rs  time_provider.rs
decision-gate-sdk-gen/: Cargo.toml  README.md
decision-gate-sdk-gen/src/: lib.rs  main.rs
decision-gate-sdk-gen/tests/: doc_safety.rs  sdk_gen.rs
decision-gate-store-sqlite/: AGENTS.md  Cargo.toml  README.md
decision-gate-store-sqlite/src/: lib.rs  store.rs
decision-gate-store-sqlite/tests/: schema_registry.rs  sqlite_store.rs  sqlite_store_unit.rs
enterprise/enterprise-system-tests/: AGENTS.md  Cargo.toml  README.md  test_gaps.toml  test_registry.toml
examples/ci-gate/: AGENTS.md  Cargo.toml  README.md
examples/data-disclosure/: AGENTS.md  Cargo.toml  README.md
examples/file-disclosure/: AGENTS.md  Cargo.toml  README.md
examples/llm-scenario/: AGENTS.md  Cargo.toml  README.md
examples/minimal/: AGENTS.md  Cargo.toml  README.md
ret-logic/: AGENTS.md  Cargo.toml  README.md
ret-logic/src/: builder.rs  dsl.rs  error.rs  executor.rs  lib.rs  plan.rs  requirement.rs  serde_support.rs  tests.rs  traits.rs  tristate.rs
ret-logic/tests/: builder.rs  dsl.rs  error.rs  executor.rs  plan.rs  requirement.rs  serde_support.rs  traits.rs  tristate.rs
sdks/python/: README.md  pyproject.toml
system-tests/: AGENTS.md  Cargo.toml  README.md  TEST_MATRIX.md  perf_targets.toml  perf_targets_sqlite.toml  requirements-agentic.txt  test_gaps.toml  test_registry.toml
system-tests/src/: lib.rs
system-tests/tests/: agentic.rs  anchor_fuzz.rs  assetcore_integration.rs  audit_registry.rs  auth_matrix.rs  config_validation.rs  contract.rs  determinism.rs  functional.rs  golden_runpacks.rs  mcp_auth.rs  mcp_hardening.rs  mcp_transport.rs  namespace_defaults.rs  operations.rs  performance.rs  provider_discovery.rs  runpack.rs  (+11 more)
(+810 files in other folders)
