# Decision Gate Workspace Root
# ============================================================================
# This is the workspace manifest coordinating all crates in the Decision Gate project.
# The vendoring configuration in .cargo/config.toml applies to all workspace members.
# ============================================================================

[workspace]
members = [
    "decision-gate-core",
    "decision-gate-broker",
    "decision-gate-contract",
    "decision-gate-providers",
    "decision-gate-store-sqlite",
    "decision-gate-mcp",
    "decision-gate-cli",
    "ret-logic",
    "enterprise/decision-gate-enterprise",
    "enterprise/decision-gate-store-enterprise",
    "enterprise/enterprise-system-tests",
    "examples/minimal",
    "examples/file-disclosure",
    "examples/llm-scenario",
    "examples/agent-loop",
    "examples/ci-gate",
    "examples/data-disclosure",
    "system-tests",
]
default-members = [
    "decision-gate-core",
    "decision-gate-broker",
    "decision-gate-contract",
    "decision-gate-providers",
    "decision-gate-store-sqlite",
    "decision-gate-mcp",
    "decision-gate-cli",
    "ret-logic",
    "enterprise/decision-gate-enterprise",
    "enterprise/decision-gate-store-enterprise",
    "examples/minimal",
    "examples/file-disclosure",
    "examples/llm-scenario",
    "examples/agent-loop",
    "examples/ci-gate",
    "examples/data-disclosure",
]
resolver = "3"

[workspace.package]
version = "0.1.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
incremental = false
debug = false

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "deny"
unused_imports = "deny"
unused_variables = "deny"
unused_mut = "deny"
unused_must_use = "deny"
dead_code = "deny"
unreachable_code = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
cast_possible_truncation = "deny"
allow_attributes_without_reason = "deny"
dbg_macro = "deny"
exit = "deny"
mem_forget = "deny"
panic_in_result_fn = "deny"
unwrap_in_result = "deny"
print_stdout = "deny"
print_stderr = "deny"
use_debug = "deny"
undocumented_unsafe_blocks = "deny"
multiple_unsafe_ops_per_block = "deny"
missing_docs_in_private_items = "deny"
missing_errors_doc = "warn"
missing_panics_doc = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
private_intra_doc_links = "warn"
bare_urls = "warn"
