# Copyright (c) 2026 Michael Campbell. All rights reserved.
# Decision Gate Broker manifest
# ============================================================================
# This manifest inherits workspace defaults for shared version and lint settings.
# ============================================================================

[package]
name = "decision-gate-broker"
version = { workspace = true }
edition = "2024"
rust-version = "1.92"

[dependencies]
base64 = "0.22"
decision-gate-core = { path = "../decision-gate-core" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.37", features = ["sync"] }
url = "2.5"

[dev-dependencies]
tempfile = "3.10"
tiny_http = "0.12"

[lints]
workspace = true
