# Copyright (c) 2026 Michael Campbell. All rights reserved.
# Decision Gate Broker manifest
# ============================================================================
# This manifest inherits workspace defaults for shared version and lint settings.
# ============================================================================

[package]
name = "decision-gate-broker"
version = { workspace = true }
license = { workspace = true }
edition = "2024"
rust-version = "1.92"

[dependencies]
base64 = "0.22"
decision-gate-core = { path = "../decision-gate-core", version = "0.1.0" }
reqwest = { version = "0.13", default-features = false, features = ["blocking", "rustls", "webpki-roots"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.49", features = ["sync"] }
url = "2.5"

[dev-dependencies]
tempfile = "3.10"
tiny_http = "0.12"

[lints]
workspace = true
