# Copyright (c) 2026 Michael Campbell. All rights reserved.
# Decision Gate CLI manifest
# ============================================================================
# This manifest inherits workspace defaults for shared version and lint settings.
# ============================================================================

[package]
name = "decision-gate-cli"
version = { workspace = true }
license = { workspace = true }
edition = "2024"
rust-version = "1.92"

[[bin]]
name = "decision-gate"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
decision-gate-contract = { path = "../decision-gate-contract" }
decision-gate-core = { path = "../decision-gate-core" }
decision-gate-mcp = { path = "../decision-gate-mcp" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_jcs = "0.1"
thiserror = "1.0"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
bytes = "1.9"
http-body-util = "0.1"
hyper = "1.5"
hyper-util = { version = "0.1", features = ["tokio"] }

[lints]
workspace = true
