# Copyright (c) 2026 Michael Campbell. All rights reserved.
# Decision Gate Config manifest
# ============================================================================
# Canonical configuration model + validation + docs/schema generation.
# ============================================================================

[package]
name = "decision-gate-config"
version = { workspace = true }
license = { workspace = true }
edition = "2024"
rust-version = "1.92"

[dependencies]
decision-gate-core = { path = "../decision-gate-core", version = "0.1.0" }
decision-gate-store-sqlite = { path = "../decision-gate-store-sqlite", version = "0.1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
toml = "0.9"

[dev-dependencies]
jsonschema = "0.40"
serde_json = "1.0"
tempfile = "3.10"

[lints]
workspace = true
