# Copyright (c) 2026 Michael Campbell. All rights reserved.
# Decision Gate Contract manifest (self-contained for stand-alone publishing)
# ============================================================================
# Lint settings are defined here for standalone builds; workspace profiles
# are owned by the workspace root when building inside the workspace.
# ============================================================================

[package]
name = "decision-gate-contract"
version = "0.1.0"
license = { workspace = true }
edition = "2024"
rust-version = "1.92"

[[bin]]
name = "decision-gate-contract"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
decision-gate-config = { path = "../decision-gate-config" }
decision-gate-core = { path = "../decision-gate-core" }
jsonschema = { version = "0.18", features = ["draft202012"] }
ron = "0.8"
ret-logic = { path = "../ret-logic" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_jcs = "0.1"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.10"
url = "2.5"

[lints.rust]
unsafe_code = "deny"
missing_docs = "deny"
unused_imports = "deny"
unused_variables = "deny"
unused_mut = "deny"
unused_must_use = "deny"
dead_code = "deny"
unreachable_code = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
cast_possible_truncation = "deny"
allow_attributes_without_reason = "deny"
dbg_macro = "deny"
exit = "deny"
mem_forget = "deny"
panic_in_result_fn = "deny"
unwrap_in_result = "deny"
print_stdout = "deny"
print_stderr = "deny"
use_debug = "deny"
undocumented_unsafe_blocks = "deny"
multiple_unsafe_ops_per_block = "deny"
missing_docs_in_private_items = "deny"
missing_errors_doc = "warn"
missing_panics_doc = "warn"

[lints.rustdoc]
broken_intra_doc_links = "deny"
private_intra_doc_links = "warn"
bare_urls = "warn"
