# Copyright (c) 2026 Michael Campbell. All rights reserved.
# Decision Gate Core manifest
# ============================================================================
# This manifest inherits workspace defaults for shared version and lint settings.
# ============================================================================

[package]
name = "decision-gate-core"
version = { workspace = true }
edition = "2024"
rust-version = "1.92"

[dependencies]
ret-logic = { path = "../ret-logic" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_jcs = "0.1"
sha2 = "0.10"
thiserror = "1.0"
bigdecimal = "0.4"
time = { version = "0.3", features = ["parsing"] }

[lints]
workspace = true
