# Copyright (c) 2026 Michael Campbell. All rights reserved.
# Decision Gate Core manifest
# ============================================================================
# This manifest inherits workspace defaults for shared version and lint settings.
# ============================================================================

[package]
name = "decision-gate-core"
version = { workspace = true }
license = { workspace = true }
edition = "2024"
rust-version = "1.92"

[dependencies]
ret-logic = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_jcs = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
bigdecimal = { workspace = true }
time = { workspace = true, features = ["parsing"] }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
