# Copyright (c) 2026 Michael Campbell. All rights reserved.
# Decision Gate MCP manifest
# ============================================================================
# This manifest inherits workspace defaults for shared version and lint settings.
# ============================================================================

[package]
name = "decision-gate-mcp"
version = { workspace = true }
license = { workspace = true }
edition = "2024"
rust-version = "1.92"

[dependencies]
axum = "0.7"
axum-server = { version = "0.7", features = ["tls-rustls"] }
async-trait = "0.1"
aws-config = "1.1"
aws-sdk-s3 = "1.60"
base64 = "0.22"
bytes = "1.6"
decision-gate-core = { path = "../decision-gate-core" }
decision-gate-contract = { path = "../decision-gate-contract" }
decision-gate-providers = { path = "../decision-gate-providers" }
decision-gate-store-sqlite = { path = "../decision-gate-store-sqlite" }
ed25519-dalek = { version = "2.1", features = ["std"] }
futures = "0.3"
jsonschema = { version = "0.18", features = ["draft202012"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rand = { workspace = true }
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }
rustls-pemfile = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_jcs = "0.1"
thiserror = "1.0"
tokio = { version = "1.43", features = ["io-std", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1"
toml = "0.8"
tempfile = "3.10"

[dev-dependencies]
ret-logic = { path = "../ret-logic" }
tempfile = "3.10"
url = "2.5"

[lints]
workspace = true
