# Copyright (c) 2026 Michael Campbell. All rights reserved.
# Decision Gate MCP manifest
# ============================================================================
# This manifest inherits workspace defaults for shared version and lint settings.
# ============================================================================

[package]
name = "decision-gate-mcp"
version = { workspace = true }
license = { workspace = true }
edition = "2024"
rust-version = "1.92"

[dependencies]
axum = "0.8"
axum-server = { version = "0.8", features = ["tls-rustls"] }
async-trait = "0.1"
aws-config = "1.1"
aws-sdk-s3 = "1.121.0"
base64 = "0.22"
bytes = "1.6"
decision-gate-core = { path = "../decision-gate-core", version = "0.1.0" }
decision-gate-config = { path = "../decision-gate-config", version = "0.1.0" }
decision-gate-contract = { path = "../decision-gate-contract", version = "0.1.0" }
decision-gate-providers = { path = "../decision-gate-providers", version = "0.1.0" }
decision-gate-store-sqlite = { path = "../decision-gate-store-sqlite", version = "0.1.0" }
ed25519-dalek = { version = "2.1", features = ["std"] }
jsonschema = "0.40"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "rustls", "webpki-roots"] }
rand = { workspace = true }
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }
rustls-pki-types = { version = "1.14", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_jcs = "0.1"
thiserror = "2.0"
tokio = { version = "1.49", features = ["io-std", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1"
tempfile = "3.10"

[dev-dependencies]
ret-logic = { path = "../ret-logic", version = "0.1.0" }
tempfile = "3.10"
toml = "0.9"
url = "2.5"

[lints]
workspace = true
