# Copyright (c) 2026 Michael Campbell. All rights reserved.
# Decision Gate Providers manifest
# ============================================================================
# This manifest inherits workspace defaults for shared version and lint settings.
# ============================================================================

[package]
name = "decision-gate-providers"
version = { workspace = true }
edition = "2024"
rust-version = "1.92"

[dependencies]
decision-gate-core = { path = "../decision-gate-core" }
jsonpath_lib = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
time = { version = "0.3", features = ["formatting", "parsing"] }

[dev-dependencies]
ret-logic = { path = "../ret-logic" }
tempfile = "3.10"
tiny_http = "0.12"

[lints]
workspace = true
