# Copyright (c) 2026 Michael Campbell. All rights reserved.
# RET Logic crate manifest (self-contained for stand-alone publishing)
# ============================================================================
# Lint settings mirror workspace defaults for standalone builds; release
# profiles live at the workspace root when used in the workspace.
# ============================================================================

[package]
name = "ret-logic"
version = "0.1.0"
license = { workspace = true }
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = { version = "1.13.0", features = ["serde"] }
ron = "0.8"

[lints.rust]
unsafe_code = "deny"
missing_docs = "deny"
unused_imports = "deny"
unused_variables = "deny"
unused_mut = "deny"
unused_must_use = "deny"
dead_code = "deny"
unreachable_code = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
cast_possible_truncation = "deny"
allow_attributes_without_reason = "deny"
dbg_macro = "deny"
exit = "deny"
mem_forget = "deny"
panic_in_result_fn = "deny"
unwrap_in_result = "deny"
print_stdout = "deny"
print_stderr = "deny"
use_debug = "deny"
undocumented_unsafe_blocks = "deny"
multiple_unsafe_ops_per_block = "deny"
missing_docs_in_private_items = "deny"
missing_errors_doc = "warn"
missing_panics_doc = "warn"

[lints.rustdoc]
broken_intra_doc_links = "deny"
private_intra_doc_links = "warn"
bare_urls = "warn"
