# Decision Gate System Tests manifest
# ============================================================================
# This manifest defines the system-tests crate and its dependencies.
# ============================================================================

[package]
name = "system-tests"
version = { workspace = true }
edition = "2024"
rust-version = "1.92"
publish = false
autotests = false

[dependencies]
axum = { version = "0.7", features = ["json"] }
decision-gate-contract = { path = "../decision-gate-contract" }
decision-gate-core = { path = "../decision-gate-core" }
decision-gate-cli = { path = "../decision-gate-cli" }
decision-gate-mcp = { path = "../decision-gate-mcp" }
decision-gate-store-sqlite = { path = "../decision-gate-store-sqlite" }
jsonschema = { version = "0.18", features = ["draft202012"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }
ret-logic = { path = "../ret-logic" }
serde = { version = "1.0", features = ["derive"] }
serde_jcs = "0.1"
serde_json = "1.0"
tempfile = "3.10"
tokio = { version = "1.43", features = ["io-util", "macros", "rt-multi-thread", "sync", "time"] }
toml = "0.8"
url = "2.5"

[lints]
workspace = true

[features]
system-tests = []

[[test]]
name = "smoke"
path = "tests/smoke.rs"
required-features = ["system-tests"]

[[test]]
name = "functional"
path = "tests/functional.rs"
required-features = ["system-tests"]

[[test]]
name = "providers"
path = "tests/providers.rs"
required-features = ["system-tests"]

[[test]]
name = "mcp_transport"
path = "tests/mcp_transport.rs"
required-features = ["system-tests"]

[[test]]
name = "runpack"
path = "tests/runpack.rs"
required-features = ["system-tests"]

[[test]]
name = "reliability"
path = "tests/reliability.rs"
required-features = ["system-tests"]

[[test]]
name = "security"
path = "tests/security.rs"
required-features = ["system-tests"]

[[test]]
name = "contract"
path = "tests/contract.rs"
required-features = ["system-tests"]

[[test]]
name = "operations"
path = "tests/operations.rs"
required-features = ["system-tests"]

[[test]]
name = "performance"
path = "tests/performance.rs"
required-features = ["system-tests"]
