# Decision Gate System Tests manifest
# ============================================================================
# This manifest defines the system-tests crate and its dependencies.
# ============================================================================

[package]
name = "system-tests"
version = { workspace = true }
license = { workspace = true }
edition = "2024"
rust-version = "1.92"
publish = false
autotests = false

[dependencies]
axum = { version = "0.8", features = ["json"] }
aws-config = "1.1"
aws-sdk-s3 = "1.121.0"
base64 = "0.22"
decision-gate-config = { path = "../decision-gate-config", version = "0.1.0" }
decision-gate-contract = { path = "../decision-gate-contract", version = "0.1.0" }
decision-gate-core = { path = "../decision-gate-core", version = "0.1.0" }
decision-gate-cli = { path = "../decision-gate-cli", version = "0.1.0" }
decision-gate-broker = { path = "../decision-gate-broker", version = "0.1.0" }
decision-gate-mcp = { path = "../decision-gate-mcp", version = "0.1.0" }
decision-gate-store-sqlite = { path = "../decision-gate-store-sqlite", version = "0.1.0" }
ed25519-dalek = { version = "2.1", features = ["std"] }
jsonschema = "0.40"
rcgen = "0.14"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "webpki-roots"] }
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }
ret-logic = { path = "../ret-logic", version = "0.1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_jcs = "0.1"
serde_json = "1.0"
tempfile = "3.10"
testcontainers = "0.26"
tokio = { version = "1.49", features = ["io-util", "macros", "rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1"
toml = "0.9"
url = "2.5"

[lints]
workspace = true

[features]
system-tests = []

[[test]]
name = "smoke"
path = "tests/smoke.rs"
required-features = ["system-tests"]

[[test]]
name = "functional"
path = "tests/functional.rs"
required-features = ["system-tests"]

[[test]]
name = "providers"
path = "tests/providers.rs"
required-features = ["system-tests"]

[[test]]
name = "mcp_transport"
path = "tests/mcp_transport.rs"
required-features = ["system-tests"]

[[test]]
name = "runpack"
path = "tests/runpack.rs"
required-features = ["system-tests"]

[[test]]
name = "reliability"
path = "tests/reliability.rs"
required-features = ["system-tests"]

[[test]]
name = "security"
path = "tests/security.rs"
required-features = ["system-tests"]

[[test]]
name = "contract"
path = "tests/contract.rs"
required-features = ["system-tests"]

[[test]]
name = "operations"
path = "tests/operations.rs"
required-features = ["system-tests"]

[[test]]
name = "performance"
path = "tests/performance.rs"
required-features = ["system-tests"]

[[test]]
name = "golden_runpacks"
path = "tests/golden_runpacks.rs"
required-features = ["system-tests"]

[[test]]
name = "sdk_client"
path = "tests/sdk_client.rs"
required-features = ["system-tests"]

[[test]]
name = "sdk_examples"
path = "tests/sdk_examples.rs"
required-features = ["system-tests"]

[[test]]
name = "agentic"
path = "tests/agentic.rs"
required-features = ["system-tests"]
